# rd-nxp-easyevse-imxrt106x

./: .clang-format  .gitattributes  COPYING-BSD-3  LICENSE.txt  README.md  SBOM-rd-nxp-easyevse-imxrt106x-5.1.spdx.json  SW-Content-Register.txt  rd-nxp-easyevse-imxrt106x.xml
EasyEVSE_FreeRTOS/: .gitignore  .project
EasyEVSE_FreeRTOS/RT1060/: .cproject  .gitignore  .project
EasyEVSE_FreeRTOS/RT1060/EV/: RT1060_EasyEVSE_FreeRTOS_EV.ld  RT1060_EasyEVSE_FreeRTOS_EV_library.ld  RT1060_EasyEVSE_FreeRTOS_EV_memory.ld
EasyEVSE_FreeRTOS/RT1060/EVSE/: RT1060_EasyEVSE_FreeRTOS_EVSE.ld  RT1060_EasyEVSE_FreeRTOS_EVSE_library.ld  RT1060_EasyEVSE_FreeRTOS_EVSE_memory.ld
EasyEVSE_FreeRTOS/RT1060/EVSE_ETH/: RT1060_EasyEVSE_FreeRTOS_EVSE_ETH.ld  RT1060_EasyEVSE_FreeRTOS_EVSE_ETH_library.ld  RT1060_EasyEVSE_FreeRTOS_EVSE_ETH_memory.ld
EasyEVSE_FreeRTOS/RT1060/EV_UI/: RT1060_EasyEVSE_FreeRTOS_EV_UI.ld  RT1060_EasyEVSE_FreeRTOS_EV_UI_library.ld  RT1060_EasyEVSE_FreeRTOS_EV_UI_memory.ld
EasyEVSE_FreeRTOS/RT1060/EasyEVSE_LVGL/: .cproject  .gitignore  .project
EasyEVSE_FreeRTOS/RT1060/EasyEVSE_OCPP/: .cproject  .gitignore  (+1 more)
EasyEVSE_FreeRTOS/RT1064/: .cproject  .gitignore  .project
EasyEVSE_FreeRTOS/common/source/uart_bridge/: CMakeLists.txt  hal_uart_bridge.c  hal_uart_bridge.h
LVGL_EV_UI/: .gitignore  LVGL_EV_UI.guiguider
LVGL_UI/: .gitignore  EVSE_GUI.guiguider
certs/: README.md
certs/csms/: certChain.pem  leafKey.pem  rootCertificate.pem  subCAKey.pem
certs/ocpp_client/: CSMS_ROOT_CA.der  OCPP_CLIENT.der  OCPP_CLIENT.pem  OCPP_CLIENT_CHAIN.pem  OCPP_CLIENT_KEY.pem
(+710 files in other folders)
